--- a/lib/templates/regions.styl
+++ b/lib/templates/regions.styl
@@ -2,5 +2,5 @@ $regions =%s
 
 for region in $regions
     .region-{region} {
-        background-image: url(unquote('../img/icons/regions/' + region + '.png'));
+        background-image: url(unquote('../../img/icons/regions/' + region + '.png'));
     }
