--- a/lib/templates/jinja2/collection_colors.styl
+++ b/lib/templates/jinja2/collection_colors.styl
@@ -4,3 +4,5 @@
 {% for color, hex in colors %}
 $color-collection--{{ color }} = {{ hex }};
 {%- endfor %}
+
+$collection-colors = {% for color, hex in colors %}{{ color }} {% endfor %};
